# omnes-pro-uno

./: .gitignore  README.md  pyproject.toml
docker/: charm.dockerfile
omnes_pro_uno/: edsse.py  fphse.py  ickae.py  utils.py
tests/: test_edsse.py  test_fphse.py  test_ickae.py
tests/fixtures/: fphse.json  gen_fphse.py
